// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugins/tsLoader > should set include/exclude 1`] = `
{
  "module": {
    "rules": [
      {
        "exclude": [
          "src/**/*.js",
        ],
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
          "src/**/*.ts",
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/babel-loader",
            "options": {
              "plugins": [
                "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
                "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "useESModules": true,
                    "version": "7.23.2",
                  },
                ],
                "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/babel-preset/dist/pluginLockCorejsVersion",
              ],
              "presets": [
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": true,
                    "corejs": {
                      "proposals": true,
                      "version": "3.32",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": "commonjs",
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
              ],
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/ts-loader/index.js",
            "options": {
              "allowTsInNodeModules": true,
              "compilerOptions": {
                "module": "esnext",
                "target": "esnext",
              },
              "transpileOnly": true,
            },
          },
        ],
      },
    ],
  },
}
`;

exports[`plugins/tsLoader > should set ts-loader 1`] = `
{
  "module": {
    "rules": [
      {
        "include": [
          {
            "and": [
              "<ROOT>",
              {
                "not": /\\[\\\\\\\\/\\]node_modules\\[\\\\\\\\/\\]/,
              },
            ],
          },
        ],
        "test": /\\\\\\.\\(ts\\|mts\\|cts\\|tsx\\)\\$/,
        "use": [
          {
            "loader": "<WORKSPACE>/packages/builder/builder-shared/compiled/babel-loader",
            "options": {
              "plugins": [
                "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-export-default-from/lib/index.js",
                "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-partial-application/lib/index.js",
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-proposal-pipeline-operator/lib/index.js",
                  {
                    "proposal": "minimal",
                  },
                ],
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/plugin-transform-runtime/lib/index.js",
                  {
                    "useESModules": true,
                    "version": "7.23.2",
                  },
                ],
                "<WORKSPACE>/node_modules/<PNPM_INNER>/@rsbuild/babel-preset/dist/pluginLockCorejsVersion",
              ],
              "presets": [
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-env/lib/index.js",
                  {
                    "bugfixes": true,
                    "corejs": {
                      "proposals": true,
                      "version": "3.32",
                    },
                    "exclude": [
                      "transform-typeof-symbol",
                    ],
                    "modules": "commonjs",
                    "targets": [
                      "> 0.01%",
                      "not dead",
                      "not op_mini all",
                    ],
                    "useBuiltIns": "entry",
                  },
                ],
                [
                  "<WORKSPACE>/node_modules/<PNPM_INNER>/@babel/preset-typescript/lib/index.js",
                  {
                    "allExtensions": true,
                    "allowDeclareFields": true,
                    "allowNamespaces": true,
                    "isTSX": true,
                    "optimizeConstEnums": true,
                  },
                ],
              ],
            },
          },
          {
            "loader": "<WORKSPACE>/node_modules/<PNPM_INNER>/ts-loader/index.js",
            "options": {
              "allowTsInNodeModules": true,
              "compilerOptions": {
                "module": "esnext",
                "target": "esnext",
              },
              "transpileOnly": true,
            },
          },
        ],
      },
    ],
  },
}
`;
